--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:www.db4free.net}:3306/unimanager?serverTimezone=Europe/Lisbon&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=Bineladen3d!
+spring.datasource.continue-on-error=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.output.ansi.enabled=ALWAYS
+server.error.include-message=ALWAYS
